# console_game_framework

./: CMakeLists.txt
GameData/: GameField.txt
include/: Game.hpp
src/main/: CMakeLists.txt  Game.cpp
src/test/: CMakeLists.txt  main.cpp
